# iPSC_Village_scripts

./: CompareHarmonySeurat.R  Compare_Demultiplexing.R  data_zip2save.qsub
Cluster_Pathway_Analysis/: Cluster_Pathway_Analysis.R  Cluster_Pathway_Analysis.qsub  logs
Clustering/: All_Integrated_QC.R  Brisbane_Clustering_Testing.R  Brisbane_Clustering_Testing.sh  Brisbane_Clustering_TestingSubmit.sh  Integrate_All_Cluster.R  Integrate_All_Cluster_Remove_Bad.R  scpred_Brisbane_Clusters.R  scpred_Brisbane_Clusters_baseline_ref.R  scpred_Brisbane_Clusters_baseline_ref_Res0.13_5cluster.R  scpred_Brisbane_Clusters_baseline_ref_Res0.13_5clusters_all_sep.R  scpred_Brisbane_Clusters_baseline_ref_Res0.13_5clusters_all_sep_SCT.R  scpred_Brisbane_Clusters_baseline_ref_Res0.2_7cluster.R
EdgeR/: EdgeR.R  EdgeR.sh  EdgeRSubmit.sh
Expression_Boxplots/: Expression_Boxplots.R  pluripotency_deg_boxplots.R
Expression_Correlation/: Expression_Correlation.R
Growth_rate/: 18_line_ratrack.sh  18_line_ratrack_4days.sh  18_line_ratrack_limited_times.sh  18_line_ratrack_more_times.sh  18_line_village.R  Snakefile_edited.smk  Snakefile_edited_4days.smk  Snakefile_edited_limited_times.smk  Snakefile_edited_more_times.smk  growth_rate.R  proportion_correlations.R  ratrack.sh
Growth_rate/code/: CMakeLists.txt  abc.py  bernoulli.cpp  csvtools.py  nrm.cpp  plots.py  precheck.py  simtools.py
Lineage_Tracing/: Monocle3.R  Phate.R  Slingshot.R
Nona_multiome/: cell_line_proportions.R
Pooling_variance/: Demuxafy.sh  capture_pooling_variance.R
Power_Calculations/: Power_Calculations.R
(+230 files in other folders)
